@@ -414,12 +414,12 @@ then
 	set_timezone
     fi
 #    # DO NOT FOLLOW THIS EXAMPLE IN OTHER PACKAGES
-#    updatercd mountkernfs start 35 S .
-#    if [ -x /usr/sbin/invoke-rc.d ]; then
-#	invoke-rc.d mountkernfs start
-#    else
-#	/etc/init.d/mountkernfs 2>/dev/null || true
-#    fi
+     updatercd glibc.sh start 01 S .
+     if [ -x /usr/sbin/invoke-rc.d ]; then
+	invoke-rc.d glibc.sh start
+     else
+	/etc/init.d/glibc.sh 2>/dev/null || true
+     fi
 fi
 
 if [ "`uname -s`" = Linux ]; then
