@@ -1,0 +1,10 @@
+#! /bin/sh -e
+#
+# This script is existed for detecting depreciated kernel version to
+# check glibc incompatibility.
+
+if [ "`uname -s`" = Linux ]; then
+    # glibc kernel version check: KERNEL_VERSION_CHECK
+fi
+
+exit 0
